web-wallet: Fix content alignment regression
Resolves #1988

--- a/web-wallet/src/style/dusk-components/suspense.css
+++ b/web-wallet/src/style/dusk-components/suspense.css
@@ -1,6 +1,7 @@
 .dusk-suspense {
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
   gap: var(--default-gap);
 
